
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct fd_read_buffer {int fd; } ;
typedef int strm_value ;
struct TYPE_3__ {struct fd_read_buffer* data; } ;
typedef TYPE_1__ strm_stream ;


 int STRM_OK ;
 int close (int ) ;
 int free (struct fd_read_buffer*) ;

__attribute__((used)) static int
read_close(strm_stream* strm, strm_value d)
{
  struct fd_read_buffer *b = strm->data;

  close(b->fd);
  free(b);
  return STRM_OK;
}
