; ModuleID = '/home/carl/AnghaBench/streem/src/extr_io.c_read_close.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_io.c_read_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.fd_read_buffer* }
%struct.fd_read_buffer = type { i32 }

@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32)* @read_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_close(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.fd_read_buffer*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load %struct.fd_read_buffer*, %struct.fd_read_buffer** %7, align 8
  store %struct.fd_read_buffer* %8, %struct.fd_read_buffer** %5, align 8
  %9 = load %struct.fd_read_buffer*, %struct.fd_read_buffer** %5, align 8
  %10 = getelementptr inbounds %struct.fd_read_buffer, %struct.fd_read_buffer* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @close(i32 %11)
  %13 = load %struct.fd_read_buffer*, %struct.fd_read_buffer** %5, align 8
  %14 = call i32 @free(%struct.fd_read_buffer* %13)
  %15 = load i32, i32* @STRM_OK, align 4
  ret i32 %15
}

declare dso_local i32 @close(i32) #1

declare dso_local i32 @free(%struct.fd_read_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
